--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ body{
 main{
     display: inline-block;
     width: 860px;
+    margin-top: 100px;
     margin-left: calc((100% - 860px) / 2);
     margin-right: calc((100% - 860px) / 2);
 }
