--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,17 @@
+body,
+body * {
+    margin: 0;
+    padding: 0;
+    vertical-align: top;
+    box-sizing: border-box;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 body{
     background-color: #8ecadf;
 }
 
-main{
+.container{
     display: inline-block;
     width: 860px;
     margin-top: 100px;
@@ -10,16 +19,37 @@ main{
     margin-right: calc((100% - 860px) / 2);
 }
 
-div:first-of-type{
+.left-column{
     display: inline-block;
     width: 40%;
     float: left;
     background-color: #0051a9;
+    padding: 40px;
 }
 
-div:last-of-type{
+.main-title{
+    margin-bottom: 100px;
+    color: #fff;
+    font-size: 30px;
+    line-height: 30px;
+}
+
+.bottom-links{
+
+}
+
+.link{
+    color: #fff;
+}
+
+.symbol{
+    color: #fff;
+}
+
+.right-column{
     display: inline-block;
     width: 60%;
+    padding: 40px;
     background-color: #fff;
     float: left;
 }
