--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,19 @@ body{
     padding: 60px;
     background-color: #fff;
     float: left;
+    position: relative;
+}
+
+.close{
+    display: inline-block;
+    width: 60px;
+    height: 60px;
+    line-height: 54px;
+    font-size: 30px;
+    text-align: center;
+    top: 0;
+    right: 0;
+    position: absolute;
 }
 
 .form{
