--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@ body{
     margin-top: 100px;
     margin-left: calc((100% - 860px) / 2);
     margin-right: calc((100% - 860px) / 2);
+    position: relative;
 }
 
 .left-column{
@@ -24,11 +25,14 @@ body{
     float: left;
     background-color: #0051a9;
     padding: 40px;
+    position: absolute;
+    top: 30px;
+    left: 0;
+    bottom: 30px;
 }
 
 .main-title{
     display: inline-block;
-    margin-bottom: 100px;
     color: #fff;
     font-size: 30px;
     line-height: 30px;
@@ -36,6 +40,9 @@ body{
 
 .bottom-links{
     display: inline-block;
+    position: absolute;
+    bottom: 20px;
+    left: 30px;
 }
 
 .link{
@@ -49,10 +56,11 @@ body{
 }
 
 .right-column{
+    display: inline-block;
     width: 60%;
     padding: 60px;
     background-color: #fff;
-    float: left;
+    float: right;
     position: relative;
 }
 
