--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ body * {
 
 body::before{
     content: ' ';
-    background-image: url("sky.jfif");
+    background-image: url("../img/sky.jfif");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -38,6 +38,7 @@ body::before{
     width: 40%;
     float: left;
     padding: 40px;
+    background-color: #66748E;
     position: absolute;
     top: 30px;
     left: 0;
@@ -46,7 +47,7 @@ body::before{
 
 .left-column::before{
     content: ' ';
-    background-image: url("mountains.jfif");
+    background-image: url("../img/mountains.jfif");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -55,7 +56,7 @@ body::before{
     right: 0px;
     bottom: 0px;
     left: 0px;    
-    filter: blur(2px);
+    filter: blur(1px);
 }
 
 .main-title{
